--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-camera-kit": "^16.1.3",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "^5.6.2",
