--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         
     - name: Setup JDK 11
@@ -27,7 +27,9 @@ jobs:
         distribution: 'temurin'
         
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm install
+        npm ci
       
     - name: Build Android APK
       run: |
