--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Build Android APK
       run: |
         cd android
+        chmod +x ./gradlew
         ./gradlew assembleRelease
         cd ..
         
