--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,10 +44,11 @@ jobs:
         name: mottu-storage-apk
         path: android/app/build/outputs/apk/release/app-release.apk
         
-    - name: Deploy to Firebase App Distribution
-      uses: wzieba/Firebase-Distribution-Github-Action@v1
-      with:
-        appId: \${{ secrets.FIREBASE_APP_ID }}
-        token: \${{ secrets.FIREBASE_TOKEN }}
-        groups: testers
-        file: android/app/build/outputs/apk/release/app-release.apk
+    # Comentado temporariamente - problema com Firebase Token
+    # - name: Deploy to Firebase App Distribution
+    #   uses: wzieba/Firebase-Distribution-Github-Action@v1
+    #   with:
+    #     appId: \${{ secrets.FIREBASE_APP_ID }}
+    #     token: \${{ secrets.FIREBASE_TOKEN }}
+    #     groups: testers
+    #     file: android/app/build/outputs/apk/release/app-release.apk
