--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,11 +44,13 @@ jobs:
         name: mottu-storage-apk
         path: android/app/build/outputs/apk/release/app-release.apk
         
-    # Comentado temporariamente - problema com Firebase Token
-    # - name: Deploy to Firebase App Distribution
-    #   uses: wzieba/Firebase-Distribution-Github-Action@v1
-    #   with:
-    #     appId: \${{ secrets.FIREBASE_APP_ID }}
-    #     token: \${{ secrets.FIREBASE_TOKEN }}
-    #     groups: testers
-    #     file: android/app/build/outputs/apk/release/app-release.apk
+    - name: Deploy to Firebase App Distribution
+      uses: wzieba/Firebase-Distribution-Github-Action@v1
+      with:
+        appId: \${{ secrets.FIREBASE_APP_ID }}
+        serviceCredentialsFile: firebase-service-account.json
+        groups: testers
+        file: android/app/build/outputs/apk/release/app-release.apk
+        
+    - name: Create service account file
+      run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase-service-account.json
