--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,11 +25,11 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        # Adiciona cache do Gradle para builds mais rápidos
+        cache: 'gradle' 
         
     - name: Install dependencies
-      run: |
-        npm install
-        npm ci
+      run: npm ci # Apenas 'npm ci' é necessário
       
     - name: Build Android APK
       run: |
@@ -44,11 +44,17 @@ jobs:
         name: mottu-storage-apk
         path: android/app/build/outputs/apk/release/app-release.apk
         
+    - name: Setup Firebase CLI
+      run: npm install -g firebase-tools
+        
     - name: Deploy to Firebase App Distribution
-      uses: google-github-actions/firebase-app-distribution@v0.6.10
-      with:
-        appId: \${{ secrets.FIREBASE_APP_ID }}
-        serviceCredentials: \${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-        groups: testers
-        releaseNotes: "Build automático - ${{ github.sha }}"
-        file: android/app/build/outputs/apk/release/app-release.apk
+      run: |
+        # Cria um arquivo temporário para a chave de serviço
+        echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase-key.json
+        
+        # Executa o deploy
+        firebase appdistribution:distribute android/app/build/outputs/apk/release/app-release.apk \
+          --app ${{ secrets.FIREBASE_APP_ID }} \
+          --groups "testers" \
+          --service-account-file firebase-key.json \
+          --release-notes "Build automático - ${{ github.sha }}"
