--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,11 +25,11 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        # Adiciona cache do Gradle para builds mais rápidos
-        cache: 'gradle' 
         
     - name: Install dependencies
-      run: npm ci # Apenas 'npm ci' é necessário
+      run: |
+        npm install
+        npm ci
       
     - name: Build Android APK
       run: |
@@ -43,18 +43,15 @@ jobs:
       with:
         name: mottu-storage-apk
         path: android/app/build/outputs/apk/release/app-release.apk
-        
+
     - name: Setup Firebase CLI
       run: npm install -g firebase-tools
         
     - name: Deploy to Firebase App Distribution
       run: |
-        # Cria um arquivo temporário para a chave de serviço
         echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase-key.json
-        
-        # Executa o deploy
         firebase appdistribution:distribute android/app/build/outputs/apk/release/app-release.apk \
-          --app ${{ secrets.FIREBASE_APP_ID }} \
-          --groups "testers" \
+          --app \${{ secrets.FIREBASE_APP_ID }} \
+          --groups testers \
           --service-account-file firebase-key.json \
           --release-notes "Build automático - ${{ github.sha }}"
