--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,16 +44,11 @@ jobs:
         name: mottu-storage-apk
         path: android/app/build/outputs/apk/release/app-release.apk
 
-    - name: Setup Firebase CLI
-      run: npm install -g firebase-tools
-        
     - name: Deploy to Firebase App Distribution
-      run: |
-        echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase-key.json
-        
-        # CORREÇÃO AQUI:
-        firebase appdistribution:distribute android/app/build/outputs/apk/release/app-release.apk \
-          --app ${{ secrets.FIREBASE_APP_ID }} \
-          --groups "testers" \
-          --service-account-credentials-file firebase-key.json \
-          --release-notes "Build automático - ${{ github.sha }}"
+      uses: wzieba/FireBase-Distribution-Github-Action@v1.7.0
+      with:
+        appId: ${{ secrets.FIREBASE_APP_ID }}
+        serviceCredentialsFileContent: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+        groups: testers
+        file: android/app/build/outputs/apk/release/app-release.apk
+        releaseNotes: "Build automático - ${{ github.sha }}"
