fix: ensure Firebase deployment step only runs on push events

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,6 +45,7 @@ jobs:
         path: android/app/build/outputs/apk/release/app-release.apk
 
     - name: Deploy to Firebase App Distribution
+      if: github.event_name == 'push'
       uses: wzieba/FireBase-Distribution-Github-Action@v1.7.0
       with:
         appId: ${{ secrets.FIREBASE_APP_ID }}
